update:Reemplazo del speaker Marco por Abel

--- a/index.html
+++ b/index.html
@@ -233,15 +233,15 @@
             <div class="col">
               <div class="card h-100">
                 <img
-                  src="./imagenes/speakers/marco.png"
+                  src="https://media-exp1.licdn.com/dms/image/C4D03AQHpCBprg4f7XQ/profile-displayphoto-shrink_800_800/0/1644121917952?e=1669852800&v=beta&t=NNYsF5YHm-61a5ZZRZshz8rRRkYcxDKXGr5N3b2ZydY"
                   class="card-img-top img-speaker"
-                  alt="Marco Canevaro"
+                  alt="Abel Córdoba"
                 />
                 <div class="card-body">
                   <span class="badge rounded-pill text-bg-info mb-2"
-                    >Blokchain</span
+                    >Criptomonedas</span
                   >
-                  <h5 class="card-title">Marco Canevaro</h5>
+                  <h5 class="card-title">Abel Córdoba</h5>
                   <p class="card-text">
                     El mundo de las criptomonedas es cada vez más inmersivo,
                     cómo podemos estar a la altura de lo que se busca en la
