--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   href="#"
                   data-bs-toggle="modal"
                   data-bs-target="#modalTicket"
-                  >Comprar tickets</a
+                  >Compra tu ticket</a
                 >
               </li>
             </ul>
@@ -124,7 +124,7 @@
                       data-bs-toggle="modal"
                       data-bs-target="#modalTicket"
                     >
-                      Comprar Tickets
+                      Compra tu Ticket
                     </button>
                   </div>
                 </div>
