update: cambio de fecha y texto del boton de la sección lugar y fecha

--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
               />
             </div>
             <div class="col-12 col-lg-6 text-white my-4 px-3">
-              <h3>SITE CENTRO - Octubre 2022</h3>
-              <span>Gral. Paz 576 Piso 9 - SMT</span>
+              <h3>SITE CENTRO - Noviembre 2022</h3>
+              <small>Gral. Paz 576 Piso 9 - SMT</small>
               <p class="text-justify">
                 En RollingCode somos un equipo de profesionales apasionados y
                 comprometidos. Tenemos nuestra Factory, donde trabajamos
@@ -305,7 +305,7 @@
                   class="btn btn-outline-light"
                   href="https://rollingcodeschool.com"
                   target="_blank"
-                  >Conoce más</a
+                  >Visítanos</a
                 >
               </div>
             </div>
