--- a/index.html
+++ b/index.html
@@ -38,18 +38,24 @@
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#main"
-                  >La conferencia</a
+                  ><i class="fa fa-home" aria-hidden="true"></i> Inicio</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#speakers">Speakers</a>
+                <a class="nav-link" href="#speakers"
+                  ><i class="fa fa-users" aria-hidden="true"></i> Speakers</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#lugar">Lugar y fecha</a>
+                <a class="nav-link" href="#lugar"
+                  ><i class="fa fa-map-marker" aria-hidden="true"></i> Lugar y
+                  fecha</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#conviertete"
-                  >Conviértete en Speaker</a
+                  ><i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                  Conviértete en Speaker</a
                 >
               </li>
               <li class="nav-item">
@@ -58,7 +64,8 @@
                   href="#"
                   data-bs-toggle="modal"
                   data-bs-target="#modalTicket"
-                  >Compra tu ticket</a
+                  ><i class="fa fa-shopping-bag" aria-hidden="true"></i> Compra
+                  tu ticket</a
                 >
               </li>
             </ul>
@@ -448,7 +455,7 @@
     </div>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
-
+    <script src="https://use.fontawesome.com/c2813ccf5b.js"></script>
     <script>
       (() => {
         "use strict";
