Agregando icono de whatsapp

--- a/index.html
+++ b/index.html
@@ -406,6 +406,13 @@
         </div>
       </div>
     </footer>
+    <div class="whatsapp">
+      <img
+        src="https://img.utdstc.com/icon/ce6/4c5/ce64c5fdcab44eb799b11d71e554c06ede50bc8524cc906de9da7c9aed58983b:200"
+        width="80"
+        alt="whatsapp"
+      />
+    </div>
 
     <!-- Modal -->
     <div
