Actualizando texto de inicio en el carousel

--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@
                   >
                     <h1>RollingCode Talks</h1>
                     <p class="d-none d-md-block">
-                      RollingCode organiza su primer evento 100% online donde
-                      podrás disfrutar de escuchar a expertos en tecnología
-                      compartiendo sus conocimientos y experiencias en
-                      desarrollo y creación de Startup. Acompáñanos en este
-                      evento único del norte argentino. Te esperamos!
+                      RollingCode organiza su primer evento 100% presencial
+                      donde podrás disfrutar de escuchar a expertos en
+                      tecnología compartiendo sus conocimientos y experiencias
+                      en desarrollo y creación de Startup. Podrás hacer
+                      networking y sacarte fortos con los fouders. Acompáñanos
+                      en este evento único del norte argentino. Te esperamos!
                     </p>
                     <a href="#" class="btn btn-outline-light">
                       Quiero ser Speaker
