--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       desarrollo y creación de Startup. Acompáñanos en este
                       evento único del norte argentino. Te esperamos!
                     </p>
-                    <a href="#" class="btn btn-outline-light">
+                    <a href="#conviertete" class="btn btn-outline-light">
                       Quiero ser Speaker
                     </a>
                     <button
@@ -406,6 +406,7 @@
         </div>
       </div>
     </footer>
+    <!-- Icono whatsapp  -->
     <div class="whatsapp">
       <img
         src="https://img.utdstc.com/icon/ce6/4c5/ce64c5fdcab44eb799b11d71e554c06ede50bc8524cc906de9da7c9aed58983b:200"
