--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                   <span class="badge rounded-pill text-bg-dark mb-2"
                     >Backend</span
                   >
-                  <h5 class="card-title">Walter Rivas</h5>
+                  <h5 class="card-title">Walter Juarez</h5>
                   <p class="card-text">
                     La seguridad de nuestras aplicaciones es muy importante, por
                     eso debemos desarrollar nuestro backend conociendo los
