--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                 />
                 <div class="card-body">
                   <span class="badge rounded-pill text-bg-primary mb-2"
-                    >Clean Code</span
+                    >Estructura de código</span
                   >
-                  <h5 class="card-title">Jhonny Guzman</h5>
+                  <h5 class="card-title">Jhonny "capo" Guzman</h5>
                   <p class="card-text">
                     Conoce las buenas prácticas del código limpio y conviértete
                     en un profesional de calidad. Durante la charla aprenderás
