Jhonny Rivas y cambio de titulo de la charla

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                 />
                 <div class="card-body">
                   <span class="badge rounded-pill text-bg-primary mb-2"
-                    >Clean Code</span
+                    >Hacking</span
                   >
-                  <h5 class="card-title">Jhonny Guzman</h5>
+                  <h5 class="card-title">Jhonny Rivas</h5>
                   <p class="card-text">
                     Conoce las buenas prácticas del código limpio y conviértete
                     en un profesional de calidad. Durante la charla aprenderás
